# LearningOpenGL

./: CMakeLists.txt  LearningOpenGL.sln  LearningOpenGL.vcxproj  LearningOpenGL.vcxproj.filters  README.md  camera.h  glad.c  main.cpp  shader.h
.github/workflows/: build.yml
cmake/modules/: FindGLFW3.cmake  FindGLM.cmake
src/: main.cpp
